修改footer，符合UI图纸

--- a/src/js/components/FileHeader/index.scss
+++ b/src/js/components/FileHeader/index.scss
@@ -59,7 +59,7 @@ header.main-header {
     ul {
       li {
         display: inline-block;
-        margin-left: .7em;
+        margin-left: 1.5em;
         a {
           font-size: 0.75em;
           color: $navcolor;
