--- a/src/js/components/SquareItems/SquareItem/index.scss
+++ b/src/js/components/SquareItems/SquareItem/index.scss
@@ -8,13 +8,14 @@
 
     z-index: 0;
     padding: 10px;
+
     //display: flex;
     //flex-direction: column;
     //justify-content: space-around;
     .item {
         background-color: $blockcolor;
         padding: 30px 30px 20px 30px;
-
+        border-radius: 10px;
         .item-fileinfo {
             padding-bottom: 20px;
             border-bottom: 1px solid $lightgrey;
