解决我要上传界面上传框和底部footer重叠的问题

--- a/src/js/components/FileUpload/index.scss
+++ b/src/js/components/FileUpload/index.scss
@@ -6,7 +6,7 @@ $bodyMarginBottom: 50px;
 .upload-body {
     width: $bodyWidth;
     background-color: $blockcolor;
-    margin: 0 auto $bodyMarginBottom;
+    margin: $bodyMarginBottom auto;
     div {
         width: 570px;
         margin: 0 auto;
