--- a/src/js/components/Footer/index.scss
+++ b/src/js/components/Footer/index.scss
@@ -7,8 +7,8 @@ $footerSecondHeight: 40px;
 $footerFontSize: 10px;
 $footerMinWidth: 900px;
 footer.footer-component {
-    position: absolute;
-    bottom: 0;
+    //position: absolute;
+    //bottom: 0;
     width: 100%;
     min-width: $footerMinWidth;
     height: $footerHeight;
