--- a/src/js/components/SquareItems/SquareItem/index.scss
+++ b/src/js/components/SquareItems/SquareItem/index.scss
@@ -67,7 +67,8 @@
                         height: 100%;
                         border-radius: 50%;
                     }
-                    display: inline-block;
+                    //display: inline-block;
+                    float: left;
                     margin-right: 10px;
                 }
                 p {
