--- a/src/js/components/FileDownload/index.scss
+++ b/src/js/components/FileDownload/index.scss
@@ -10,7 +10,8 @@ $bodyMarginTop: 50px;
     margin-bottom: $bodyMarginBottom;
     margin-top: $bodyMarginTop;
     & > div {
-        width: $bodyMinWidth;
+        width: 30%;
+        min-width: $bodyMinWidth;
         margin: 0 auto;
         header {
             padding-bottom: 50px;
@@ -35,13 +36,21 @@ $bodyMarginTop: 50px;
                 }
             }
         }
+
+        canvas {
+            z-index: 0;
+            position: absolute;
+            width: 100%;
+            height: 70%;
+            opacity: 0.1;
+        }
         section {
+            z-index: 10;
             .caption {
-                background: url("../../../icon/wave1.png") center no-repeat;
+                background: url("../../../icon/wave1.png") center repeat;
                 height: 171px;
                 width: 100%;
                 .body-logo {
-
                     height: 72px;
                     width: 47px;
                     background: url("../../../icon/lock.png") center no-repeat;
@@ -49,10 +58,8 @@ $bodyMarginTop: 50px;
                 }
                 p {
                     text-align: center;
-                    span {
-                        color: white;
-                        font-size: 1.5em;
-                    }
+                    color: white;
+                    font-size: 1.5em;
                 }
             }
             .caption:before {
