--- a/src/js/components/UserLogin/index.scss
+++ b/src/js/components/UserLogin/index.scss
@@ -17,7 +17,7 @@ $bodyMarginBottom: 50px;
         }
         background: url("../../../icon/wave2.png") center;
         flex: auto;
-
+        z-index: 10;
         display: flex;
         flex-direction: column;
         .left-info {
@@ -64,6 +64,8 @@ $bodyMarginBottom: 50px;
     }
     aside.user-login-right {
         flex: auto;
+        z-index: 10;
+
         header {
             color: $primarybtn;
             p {
@@ -75,6 +77,7 @@ $bodyMarginBottom: 50px;
         }
         section.login-form {
             display: flex;
+
             flex-direction: column;
             align-items: center;
             & > div {
