--- a/src/scss/common/base.scss
+++ b/src/scss/common/base.scss
@@ -1,5 +1,12 @@
 @import "~normalize.css";
 @import "./color.scss";
+canvas {
+    z-index: 0;
+    position: absolute;
+    width: 100%;
+    height: 70%;
+    opacity: 0.1;
+}
 
 * {
     margin: 0;
