调整header文字大小，以及下载框调整自动获取焦点，以及焦点获取时显示边框

--- a/src/js/components/FileDownload/index.scss
+++ b/src/js/components/FileDownload/index.scss
@@ -82,11 +82,13 @@ $bodyMarginTop: 50px;
             border: none;
             width: inherit;
             height: inherit;
-            font-size: 1.5em;
+            text-align: center;
+            font-size: 1.2em;
             text-indent: 5px;
           }
           input:focus {
-            outline: none;
+            border: 2px $lightBlue;
+            //outline: none;
           }
         }
         .extract-code-text-err input {
