文件详情页获取评论列表

--- a/src/js/components/FileItem/index.scss
+++ b/src/js/components/FileItem/index.scss
@@ -159,7 +159,7 @@ $bodyMarginBottom: 50px;
                     .avatar {
                         width: 48px;
                         height: 48px;
-                        background: url("https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=2983011205,1072109279&fm=27&gp=0.jpg") no-repeat center;
+                        float: left;
                         border-radius: 50%;
                     }
                     .user-comment {
