--- a/src/js/components/FileItem/index.scss
+++ b/src/js/components/FileItem/index.scss
@@ -58,7 +58,7 @@ $bodyMarginBottom: 50px;
                         margin: 0 10px;
                     }
                     & > span {
-                        color: $lightgrey;
+                        color: $grey;
                     }
                     & > div {
                         display: inline-block;
@@ -66,7 +66,7 @@ $bodyMarginBottom: 50px;
                         padding: 5px;
                         border-radius: 5px;
                         span:last-of-type {
-                            color: $lightgrey;
+                            color: $grey;
                         }
                     }
                 }
@@ -96,7 +96,7 @@ $bodyMarginBottom: 50px;
             margin-left: 20px;
             .description {
                 p {
-                    color: $lightgrey;
+                    color: $grey;
                 }
             }
             .picture {
@@ -114,7 +114,7 @@ $bodyMarginBottom: 50px;
                 margin: 5px 0;
                 span {
                     float: right;
-                    color: $lightgrey;
+                    color: $grey;
                 }
             }
         }
@@ -123,7 +123,7 @@ $bodyMarginBottom: 50px;
             padding-bottom: 10px;
             border-bottom: 1px solid $lightgrey;
             & > span {
-                color: $lightgrey;
+                color: $grey;
                 font-size: 1.2em;
             }
             ul {
@@ -137,7 +137,7 @@ $bodyMarginBottom: 50px;
                         color: $primarybtn;
                     }
                     span {
-                        color: $lightgrey;
+                        color: $grey;
                     }
                 }
                 li:first-of-type {
